[887] - moduly mail i mime_tex w autodownload
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4770 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -257,7 +257,7 @@ module_spellchecker=n
 #
 
 # PL: Poni¿ej znajduje siê lista zewnêtrznych modu³ów, stworzonych przez niezale¿nych programistów,
-# PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
+# PL: ale zaakceptowanych przez Kadu Team i wspieranych na naszym forum. Gdy wybierzesz który¶
 # PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
 # PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
 
@@ -307,6 +307,14 @@ module_mx610_notify=n
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
 module_profiles=n
+
+# Description: Mail checking module
+# PL: Modu³ do sprawdzana poczty
+module_mail=n
+
+# Description: TeX formula support
+# PL: Wsparcie dla formu³ TeX-owych
+module_mime_tex=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
