poprawki w domyslnym zestawie ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4775 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -183,6 +183,7 @@ RegisterWindowIcon=kadu/kadu-registeraccount_big.png
 UnregisterWindowIcon=kadu/kadu-unregisteraccount_big.png
 ConfigurationWizard=kadu/kadu-wizard.png
 
+KaduTab=kadu/kadu-kadu.png
 ShortCutsTab=kadu/kadu-shortcuts.png
 ChatTab=kadu/kadu-chat_big.png
 LookTab=kadu/kadu-look.png
@@ -191,6 +192,7 @@ SMSTab=kadu/phone_big.png
 NotifyTab=kadu/kadu-notifications.png
 StatusTab=kadu/kadu-status.png
 ContactsTab=kadu/kadu-contacts.png
+
 
 Agent=external_modules/module_agent.png
 MailTab=external_modules/module_mail.png
@@ -202,10 +204,9 @@ ProfilesConfigure=external_modules/module_profiles-configure.png
 ProfilesUser=external_modules/module_profiles-user.png
 Screenshot=external_modules/module_screenshot.png
 ScreenshotShot=external_modules/module_screenshot-shot.png
-ShowWeather=external_modules/module_weather-show.png
+ScreenshotShot_dis=external_modules/module_screenshot-shot_dis.png
 TabsClose=external_modules/module_tabs-close.png
 TabsDetached=external_modules/module_tabs-detach.png
 TabsDetached_dis=external_modules/module_tabs-detach_dis.png
 TabsRemove=external_modules/module_tabs-remove.png
-WeatherTab=external_modules/module_weather.png
 XOSDTab=external_modules/module_xosd.png
