--- a/.config
+++ b/.config
@@ -342,10 +342,10 @@ icons_default=y
 icons_kadu05=n
 
 # Description: Glass 16x16 icons made Mariusz Waluga
-icons_glass16=y
+icons_glass16=n
 
 # Description: Glass 22x22 icons made Mariusz Waluga
-icons_glass22=y
+icons_glass22=n
 
 ########################################### EMOTICONS #########################################################################
 # PL: ##################################### EMOTIKONY #########################################################################
