dodano modul 'filtering'
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4788 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -232,6 +232,10 @@ module_falf_mediaplayer=n
 # PL: Obs³uga statusów pobieranych z pliku
 module_filedesc=n
 
+# Description: User list filtering
+# PL: Filtrowanie listy kontaktów
+module_filtering=n
+
 # Description:
 # PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
 module_screenshot=n
