poprawki w domyslnym zestawie ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4796 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -193,7 +193,6 @@ NotifyTab=kadu/kadu-notifications.png
 StatusTab=kadu/kadu-status.png
 ContactsTab=kadu/kadu-contacts.png
 
-
 Agent=external_modules/module_agent.png
 MailTab=external_modules/module_mail.png
 MediaPlayer=external_modules/module_mediaplayer.png
@@ -210,3 +209,5 @@ TabsDetached=external_modules/module_tabs-detach.png
 TabsDetached_dis=external_modules/module_tabs-detach_dis.png
 TabsRemove=external_modules/module_tabs-remove.png
 XOSDTab=external_modules/module_xosd.png
+ShowWeather=external_modules/module_weather-show.png
+WeatherTab=external_modules/module_weather.png
