--- a/.config
+++ b/.config
@@ -345,11 +345,14 @@ icons_default=y
 # Description: Default theme from kadu 0.5.x
 icons_kadu05=n
 
-# Description: Glass 16x16 icons made Mariusz Waluga
+# Description: Glass 16x16 icons made by Mariusz Waluga
 icons_glass16=n
 
-# Description: Glass 22x22 icons made Mariusz Waluga
+# Description: Glass 22x22 icons made by Mariusz Waluga
 icons_glass22=n
+
+# Desctiption: Tango 16x16 icons made by BlotoPosniegowe
+icons_tango16=n
 
 ########################################### EMOTICONS #########################################################################
 # PL: ##################################### EMOTIKONY #########################################################################
