--- a/.config
+++ b/.config
@@ -320,6 +320,10 @@ module_mail=n
 # PL: Wsparcie dla formu³ TeX-owych
 module_mime_tex=n
 
+# Desctiption: Weather checking
+# PL: Sprawdzanie pogody
+module_weather=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
