--- a/.config
+++ b/.config
@@ -358,6 +358,9 @@ icons_glass22=n
 # Desctiption: Tango 16x16 icons made by BlotoPosniegowe
 icons_tango16=n
 
+# Description: Oxygen 16x16 icons maintained by Piotr Pelzowski
+icons_oxygen16=n
+
 ########################################### EMOTICONS #########################################################################
 # PL: ##################################### EMOTIKONY #########################################################################
 
