modul firewall w autodownloadzie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4860 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -324,6 +324,10 @@ module_mime_tex=n
 # PL: Sprawdzanie pogody
 module_weather=n
 
+# Description: Protection against unwanted chats
+# PL: Ochrona przed "klikaczami"
+module_firewall=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
