literówka w sound.conf
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4865 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -6,5 +6,5 @@ StatusChanged/ToBusy=msg.wav
 StatusChanged/ToInvisible=msg.wav
 StatusChanged/ToOffline=msg.wav
 ConnectionError=msg.wav
-FileTransfer/IncomingFile=msg.way
+FileTransfer/IncomingFile=msg.wav
 FileTransfer/Finished=msg.wav
