dodano moduł water_notify
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4885 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -308,6 +308,10 @@ module_led_notify=n
 # PL: Powiadomienia diodami na myszy mx610
 module_mx610_notify=n
 
+# Description: Notifications by Water Compiz plugin
+# PL: Powiadomienia kroplami wody w Compiz
+module_water_notify=n
+
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
 module_profiles=n
