module panelkadu dodany to autowodnloadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4888 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -332,6 +332,10 @@ module_weather=n
 # PL: Ochrona przed "klikaczami"
 module_firewall=n
 
+# Description: Makes a panel from Kadu main window
+# PL: Zamienia Kadu w panel na skraju ekranu
+module_kadupanel=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
