oops, kadupanel -> panelkadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4891 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -334,7 +334,7 @@ module_firewall=n
 
 # Description: Makes a panel from Kadu main window
 # PL: Zamienia Kadu w panel na skraju ekranu
-module_kadupanel=n
+module_panelkadu=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
