osdhints_notify w autodownload
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4896 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -336,6 +336,10 @@ module_firewall=n
 # PL: Zamienia Kadu w panel na skraju ekranu
 module_panelkadu=n
 
+# Description: Notification by OSD-like hints
+# PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
+module_osdhints_notify=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
