moduły: word_fix, parser_extender i auto_hide do autodowloadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4910 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -340,6 +340,18 @@ module_panelkadu=n
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
 module_osdhints_notify=n
 
+# Description: Automatic word replacement
+# PL: Automatyczna zamiana slow
+module_word_fix=n
+
+# Description: Auto hide Kadu window
+# PL: Automatyczne ukrywanie okna Kadu
+module_auto_hide=n
+
+# Description: Extends Kadu Parser
+# PL: Rozszerza mozliwosci Parsera Kadu
+module_parser_extender=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
