--- a/libgadu/src/Makefile.in
+++ b/libgadu/src/Makefile.in
@@ -101,6 +101,7 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DSYMUTIL = @DSYMUTIL@
 ECHO = @ECHO@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
@@ -122,6 +123,7 @@ LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+NMEDIT = @NMEDIT@
 OBJEXT = @OBJEXT@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
@@ -193,7 +195,7 @@ target_alias = @target_alias@
 lib_LTLIBRARIES = libgadu.la
 libgadu_la_SOURCES = common.c dcc.c dcc7.c events.c http.c obsolete.c pubdir.c pubdir50.c libgadu.c sha1.c
 libgadu_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include
-libgadu_la_LDFLAGS = -version-number 3:8
+libgadu_la_LDFLAGS = -version-number 3:9
 all: all-am
 
 .SUFFIXES:
