moduły: anonymous_check, cenzor, split_messages i antistring do autodownloadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4915 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -340,17 +340,33 @@ module_panelkadu=n
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
 module_osdhints_notify=n
 
-# Description: Automatic word replacement
-# PL: Automatyczna zamiana slow
-module_word_fix=n
+# Description: Automatic lookup of an interlocutor in public directory
+# PL: Automatyczne wyszukiwanie nieznajomych rozmówców w publicznym katalogu
+module_anonymous_check=n
+
+# Description: Antistring
+# PL: Ochrona przed lancuszkami
+module_antistring=n
 
 # Description: Auto hide Kadu window
 # PL: Automatyczne ukrywanie okna Kadu
 module_auto_hide=n
 
+# Description: Cenzor
+# PL: Cenzor
+module_cenzor=n
+
 # Description: Extends Kadu Parser
 # PL: Rozszerza mozliwosci Parsera Kadu
 module_parser_extender=n
+
+# Description: Automaticaly split too long messages
+# PL: Automatyczne dzielenie zbyt dlugich wiadomosci
+module_split_messages=n
+
+# Description: Automatic word replacement
+# PL: Automatyczna zamiana slow
+module_word_fix=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
