Moduł PowerKadu do autodownloadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4916 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -306,10 +306,12 @@ module_led_notify=n
 
 # Description: Notifications by LED on Logitech mx610 mouse
 # PL: Powiadomienia diodami na myszy mx610
+# Depends: notify
 module_mx610_notify=n
 
 # Description: Notifications by Water Compiz plugin
 # PL: Powiadomienia kroplami wody w Compiz
+# Depends: notify
 module_water_notify=n
 
 # Description: Profiles support
@@ -318,6 +320,7 @@ module_profiles=n
 
 # Description: Mail checking module
 # PL: Modu³ do sprawdzana poczty
+# Depends: notify
 module_mail=n
 
 # Description: TeX formula support
@@ -326,10 +329,12 @@ module_mime_tex=n
 
 # Desctiption: Weather checking
 # PL: Sprawdzanie pogody
+# Depends: notify
 module_weather=n
 
 # Description: Protection against unwanted chats
 # PL: Ochrona przed "klikaczami"
+# Depends: notify
 module_firewall=n
 
 # Description: Makes a panel from Kadu main window
@@ -338,6 +343,7 @@ module_panelkadu=n
 
 # Description: Notification by OSD-like hints
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
+# Depends: notify
 module_osdhints_notify=n
 
 # Description: Automatic lookup of an interlocutor in public directory
@@ -346,6 +352,7 @@ module_anonymous_check=n
 
 # Description: Antistring
 # PL: Ochrona przed lancuszkami
+# Depends: notify
 module_antistring=n
 
 # Description: Auto hide Kadu window
@@ -354,6 +361,7 @@ module_auto_hide=n
 
 # Description: Cenzor
 # PL: Cenzor
+# Depends: notify
 module_cenzor=n
 
 # Description: Extends Kadu Parser
@@ -367,6 +375,11 @@ module_split_messages=n
 # Description: Automatic word replacement
 # PL: Automatyczna zamiana slow
 module_word_fix=n
+
+# Description: PowerKadu
+# PL: PowerKadu
+# Depends: anonymous_check antistring auto_hide cenzor parser_extender split_messages word_fix
+module_powerkadu=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
