poczatek zmian w akcjach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4945 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu-core/Makefile.am
+++ b/kadu-core/Makefile.am
@@ -6,6 +6,7 @@ kadu_SOURCES = \
 about.cpp \
 action.cpp \
 activate.cpp \
+chat_actions.cpp \
 chat_manager.cpp \
 chat_message.cpp \
 chat_messages_view.cpp \
@@ -73,6 +74,7 @@ kadu_HEADERS = \
 about.h \
 action.h \
 activate.h \
+chat_actions.h \
 chat_manager.h \
 chat_message.h \
 chat_messages_view.h \
@@ -189,6 +191,7 @@ am_kadu_OBJECTS = \
 obj/about.$(OBJEXT) \
 obj/action.$(OBJEXT) \
 obj/activate.$(OBJEXT) \
+obj/chat_actions.$(OBJEXT) \
 obj/chat_manager.$(OBJEXT) \
 obj/chat_message.$(OBJEXT) \
 obj/chat_messages_view.$(OBJEXT) \
@@ -309,6 +312,7 @@ include $(DEPS)/about_moc.d
 include $(DEPS)/action.d
 include $(DEPS)/action_moc.d
 include $(DEPS)/activate.d
+include $(DEPS)/chat_actions.d
 include $(DEPS)/chat_manager.d
 include $(DEPS)/chat_manager_moc.d
 include $(DEPS)/chat_message.d
