obsługa qt4_docking, by Dorr
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4949 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -30,7 +30,9 @@
 
 # Description: Tray icon support (common part of all docking modules)
 # PL: Obs³uga ikony na tacce systemowej (wspólna czê¶æ wszystkich modu³ów dokuj±cych)
-module_docking=n
+module_docking=m
+
+module_qt4_docking=m
 
 # Description: XLib tray docking techniques module (works in KDE, GNOME, Xfce, ...)
 # PL: Standardowy modu³ obs³ugi tacki systemowej przy pomocy bibliotek X11
@@ -62,17 +64,17 @@ module_macosx_docking=n
 # Description: General notification module (common part of all notification modules)
 # PL: Podstawowa obs³uga powiadomieñ o zdarzeniach (wspólna czê¶æ wszystkich
 # PL:                                               modu³ów powiadomieñ)
-module_notify=n
+module_notify=m
 
 # Description: Notification by window module
 # PL: Powiadamianie za pomoc± wyskakuj±cego okienka
 # Depends: notify
-module_window_notify=n
+module_window_notify=m
 
 # Description: Notification by hints module
 # PL: Powiadamianie za pomoc± dymków
 # Depends: notify
-module_hints=n
+module_hints=m
 
 # Description: Notification by external commands module
 # PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
