--- a/.config
+++ b/.config
@@ -200,7 +200,7 @@ module_echo=n
 ############################################# EXTRA ##############################################################################
 
 # Below there are some extra modules, that were made by
-# third parties, but now ale maintained by Kadu Team
+# third parties, but now are maintained by Kadu Team
 # and are not yet accepted as normal modules which
 # goes into SVN.
 
