[994] - last_seen w autodownload
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4975 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -378,6 +378,10 @@ module_split_messages=n
 # PL: Automatyczna zamiana slow
 module_word_fix=n
 
+# Description: Last status infos
+# PL: Informacje o ostatnich statusach kontaktów
+module_last_seen=n
+
 # Description: PowerKadu
 # PL: PowerKadu
 # Depends: anonymous_check antistring auto_hide cenzor parser_extender split_messages word_fix
