--- a/.config
+++ b/.config
@@ -139,7 +139,7 @@ module_ext_sound=n
 
 # Description: dcc module with file transfer support
 # PL: Podstawowy modu³ obs³ugi po³±czeñ bezpo¶rednich wraz z przesy³aniem plików
-module_dcc=n
+module_dcc=m
 
 # Description: Voice chat support
 # PL: Obs³uga rozmów g³osowych
@@ -162,7 +162,7 @@ module_default_sms=n
 
 # Description: Register / unregister account, remind / change password support
 # PL: Obs³uga rejestracji / wyrejestrowywania konta, przypominania / zmiany has³a
-module_account_management=n
+module_account_management=m
 
 # Description: User list: support for priorities (VIP/NIP) and changing order of sorting functions
 # PL: Obs³uga priorytetów (VIP/NIP) oraz zmiany kryteriów sortowania listy kontaktów
