--- a/kadu-core/Makefile.in
+++ b/kadu-core/Makefile.in
@@ -203,6 +203,7 @@ kadu_SOURCES = \
 about.cpp \
 action.cpp \
 activate.cpp \
+chat_edit_box.cpp \
 chat_manager.cpp \
 chat_message.cpp \
 chat_messages_view.cpp \
@@ -268,6 +269,7 @@ kadu_HEADERS = \
 about.h \
 action.h \
 activate.h \
+chat_edit_box.h \
 chat_manager.h \
 chat_message.h \
 chat_messages_view.h \
@@ -330,6 +332,7 @@ updates.h
 BUILT_SOURCES = \
 moc/about_moc.cpp \
 moc/action_moc.cpp \
+moc/chat_edit_box_moc.cpp \
 moc/chat_manager_moc.cpp \
 moc/chat_messages_view_moc.cpp \
 moc/chat_widget_moc.cpp \
@@ -384,6 +387,8 @@ am_kadu_OBJECTS = \
 obj/about.$(OBJEXT) \
 obj/action.$(OBJEXT) \
 obj/activate.$(OBJEXT) \
+obj/chat_edit_box.$(OBJEXT) \
+obj/chat_edit_box_moc.$(OBJEXT) \
 obj/chat_manager.$(OBJEXT) \
 obj/chat_message.$(OBJEXT) \
 obj/chat_messages_view.$(OBJEXT) \
@@ -779,6 +784,7 @@ include $(DEPS)/about_moc.d
 include $(DEPS)/action.d
 include $(DEPS)/action_moc.d
 include $(DEPS)/activate.d
+include $(DEPS)/chat_edit_box.d
 include $(DEPS)/chat_manager.d
 include $(DEPS)/chat_manager_moc.d
 include $(DEPS)/chat_message.d
