--- a/kadu-core/Makefile.in
+++ b/kadu-core/Makefile.in
@@ -232,6 +232,7 @@ http_client.cpp \
 icons_manager.cpp \
 ignore.cpp \
 kadu.cpp \
+kadu_main_window.cpp \
 kadu_parser.cpp \
 kadu_splitter.cpp \
 kadu_text_browser.cpp \
@@ -298,6 +299,7 @@ http_client.h \
 icons_manager.h \
 ignore.h \
 kadu.h \
+kadu_main_window.h \
 kadu_parser.h \
 kadu_splitter.h \
 kadu_text_browser.h \
@@ -353,6 +355,7 @@ moc/http_client_moc.cpp \
 moc/icons_manager_moc.cpp \
 moc/ignore_moc.cpp \
 moc/kadu_moc.cpp \
+moc/kadu_main_window_moc.cpp \
 moc/kadu_text_browser_moc.cpp \
 moc/main_configuration_window_moc.cpp \
 moc/message_box_moc.cpp \
@@ -388,7 +391,6 @@ obj/about.$(OBJEXT) \
 obj/action.$(OBJEXT) \
 obj/activate.$(OBJEXT) \
 obj/chat_edit_box.$(OBJEXT) \
-obj/chat_edit_box_moc.$(OBJEXT) \
 obj/chat_manager.$(OBJEXT) \
 obj/chat_message.$(OBJEXT) \
 obj/chat_messages_view.$(OBJEXT) \
@@ -417,6 +419,7 @@ obj/http_client.$(OBJEXT) \
 obj/icons_manager.$(OBJEXT) \
 obj/ignore.$(OBJEXT) \
 obj/kadu.$(OBJEXT) \
+obj/kadu_main_window.$(OBJEXT) \
 obj/kadu_parser.$(OBJEXT) \
 obj/kadu_splitter.$(OBJEXT) \
 obj/kadu_text_browser.$(OBJEXT) \
@@ -451,6 +454,7 @@ obj/updates.$(OBJEXT) \
 obj/version.$(OBJEXT) \
 obj/about_moc.$(OBJEXT) \
 obj/action_moc.$(OBJEXT) \
+obj/chat_edit_box_moc.$(OBJEXT) \
 obj/chat_manager_moc.$(OBJEXT) \
 obj/chat_messages_view_moc.$(OBJEXT) \
 obj/chat_widget_moc.$(OBJEXT) \
@@ -471,6 +475,7 @@ obj/http_client_moc.$(OBJEXT) \
 obj/icons_manager_moc.$(OBJEXT) \
 obj/ignore_moc.$(OBJEXT) \
 obj/kadu_moc.$(OBJEXT) \
+obj/kadu_main_window_moc.$(OBJEXT) \
 obj/kadu_text_browser_moc.$(OBJEXT) \
 obj/main_configuration_window_moc.$(OBJEXT) \
 obj/message_box_moc.$(OBJEXT) \
@@ -831,6 +836,8 @@ include $(DEPS)/ignore.d
 include $(DEPS)/ignore_moc.d
 include $(DEPS)/kadu.d
 include $(DEPS)/kadu_moc.d
+include $(DEPS)/kadu_main_window.d
+include $(DEPS)/kadu_main_window_moc.d
 include $(DEPS)/kadu_parser.d
 include $(DEPS)/kadu_splitter.d
 include $(DEPS)/kadu_text_browser.d
